--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./src/server.js",
     "dev": "nodemon ./src/server.js",
-    "test": "mocha ./tests/test_v1.js"
+    "test": "mocha --timeout 10000 ./src/tests/test.js"
   },
   "repository": {
     "type": "git",
@@ -23,8 +23,16 @@
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "rotating-file-stream": "^3.2.3",
+    "sharp": "^0.33.4"
+  },
+  "devDependencies": {
+    "chai": "^4.4.1",
+    "mocha": "^10.4.0",
+    "node-fetch": "^2.6.7"
   }
 }
