--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./src/server.js",
     "dev": "nodemon ./src/server.js",
-    "test": "mocha --timeout 10000 ./src/tests/test.js"
+    "test": "mocha --timeout 10000 ./tests/test.js"
   },
   "repository": {
     "type": "git",
